Primitive Console Interface
Added in a primitive console interface that allows a basic version of the game. The methods created should allow me to test the base solution against every word in the list to see if it's able to correctly guess every word within the confines of the game

--- a/.gitignore
+++ b/.gitignore
@@ -2741,3 +2741,6 @@ venv/Scripts/pip3.exe
 venv/Scripts/python.exe
 venv/Scripts/pythonw.exe
 wordlist_official.csv
+*.pyc
+__pycache__/cheater.cpython-38.pyc
+__pycache__/cheater.cpython-38.pyc
